--- a/public/assets/css/apropos.css
+++ b/public/assets/css/apropos.css
@@ -320,6 +320,7 @@
 
 .bloc6 .container .card {
     border: none;
+    background:  none;
     height: 150px;
     width: 150px;
     background-size: contain;
@@ -552,10 +553,21 @@
 
     color: #394149;
 }
+.accordion .accordion-item {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    font-family: 'Ubuntu';
+    font-style: normal;
+    border: none;
+/*     border-color: #009EE2; */
+    box-shadow: 0px 2px 4px #009EE2;
+}
 
-.accordion-button:focus {
-    background-color: #009EE2;
+.accordion-header .accordion-button:not(.collapsed) {
     color: #FFFFFF;
+    background-color: #009EE2;
 }
 
 .accordion .accordion-item {
@@ -570,6 +582,12 @@
 
 /* Fin dernier bloc */
 
+.blocs {
+    background-image: url('../images/Jokkolanté_KK.png');
+    background-size: 60% 80%;
+/*     background-position: center; */
+    background-repeat: no-repeat;
+}
 
 /* Media Query */
 @media (max-width: 1200px) {
