--- a/public/assets/css/header_dash_client.css
+++ b/public/assets/css/header_dash_client.css
@@ -12,7 +12,7 @@
 }
 .bg .navbar .container-fluid .navbar-brand {
     margin: 0;
-    width: 15%;
+    width: 5%;
 }
 .bg .navbar .container-fluid .navbar-brand img {
     width: 50px;
@@ -21,39 +21,51 @@
 .navbar-expand-lg .navbar-nav {
     display: flex;
     align-items: center;
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
 }
 
 .navbar-light .navbar-nav .nav-link p {
-    padding: 0 1rem;
+    padding: 0 1.5rem;
     height: 100%;
     margin: auto;
     font-family: 'Manrope';
     font-style: Light;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 25px;
     line-height: 25px;
-    /* or 89% */
     letter-spacing: -0.01em;
     color: #009EE2;
-
 }
 
 .navbar-light .navbar-nav .btn {
-    padding: 10px 1rem;
+    padding: 10px 0.5rem;
+    margin-left: 2rem;
     border-radius: 50px;
     font-family: 'Manrope';
     font-style: Light;
     font-weight: 500;
-    font-size: 15px;
-    line-height: 20px;
+    font-size: 20px;
+    line-height: 25px;
     /* or 133% */
 
     display: flex;
     align-items: center;
     text-align: center;
     letter-spacing: -0.02em;
+}
+
+@media (max-width: 1200px) {
+    .navbar-light .navbar-nav .nav-link p {
+        font-size: 20px;
+        line-height: 25px;
+
+    }
+
+    .navbar-light .navbar-nav .btn {
+        font-size: 15px;
+        line-height: 20px;
+    }
 }
 
 .navbar-light .navbar-nav .bt1 {
@@ -63,7 +75,7 @@
 
 .navbar-light .navbar-nav .bt1 img {
     width: 15px;
-    margin-right: 5px;
+    margin-right: 10px;
     height: auto;
 }
 
@@ -76,7 +88,7 @@
 .bg .navbar .container-fluid .profil {
     display: flex;
     justify-content: end;
-    width: 15%;
+    width: 8%;
 }
 .bg .navbar .container-fluid .profil .bts .burger {
     color: #009EE2;
@@ -150,7 +162,9 @@
             margin: auto 5px;
             padding: 5px 0.5rem;
     }
-
+    .bg .navbar .container-fluid .profil {
+        width: 15%;
+    }
 }
 
 @media(max-width: 820px) {
