--- a/public/assets/css/dashbord.css
+++ b/public/assets/css/dashbord.css
@@ -22,21 +22,22 @@
     display: flex;
     justify-content: center;
     height: 60px;
-    margin-right: 20px;
-   }
-
-   .sidebar-brand .logo{
+margin: 0;
     padding: 5px;
    }
+
+   /* .sidebar-brand .logo{
+    padding: 5px;
+   } */
 .search-wrapper{
 
-    padding-right: 1rem ;
-    margin-top: 28px;
+margin: auto;
     border: 1px solid #009EE2;
     border-radius: 30px;
     background-color: #009EE2;
-    height: 30px;
+    height: 26px;
     color: #fff;
+ width: 60%;
     display: flex;
     align-items: center;
     overflow: hidden;
@@ -51,11 +52,15 @@
 }
 .search-wrapper input{
      height: 100%;
+     width: 100%;
      border: none;
      outline: none;
      color: #fff;
      background-color: #009EE2;
  }
+ .search-wrapper input::placeholder{
+    color: #FFFFFF40;
+}
  .nav1 .nav-item{
     padding: 0;
     margin: 0;
@@ -73,19 +78,21 @@
   }
 
 
- .nav1 p{
+ .nav1 .nav-link{
     color: #fff;
-    font-size: 16px;
+    font-size: 15px;
 
  }
  .sidebar-menu ul{
     padding: 0;
 
  }
- .fas {
-
+ .open .fas img {
+    transform: rotate(180deg);
     float: right;
- }
+    width: 25px;
+    height: 25px;
+}
  /* .fas1 {
     padding-top: 10px;
 
@@ -136,6 +143,11 @@ header{
     width: 70px;
     height: auto;
 }
+#nav-toggle:checked + .sidebar .sidebar-brand {
+    margin-right: 0;
+    padding: 5px;
+    padding-left: 0;
+}
 #nav-toggle:checked + .sidebar .logo{
 
     height: auto;
@@ -185,14 +197,15 @@ main h1{
 }
 .cards {
     display: grid;
+    align-items: center;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2rem;
     margin-top: 1rem;
 }
 .card-single{
-
+    width: 200px;
     background: #009EE2;
-    padding: 2rem;
+    padding: 20px;
     border-radius: 10px;
 }
 .card-single h4{
@@ -204,34 +217,89 @@ main h1{
 .card-single h3{
     font-size: 16px;
     color: #000;
+    display: flex;
+    justify-content: center;
 }
 .contenu{
-   padding: 30px;
+   padding: 20px;
 
 }
 @media (max-width: 991px){
-    #nav-toggle:checked + .sidebar {
+    #nav-toggle:checked + .sidebar .sidebar-menu {
         display: block;
-        width: 70px;
-        height: auto;
     }
-}
-@media (max-width: 500px) {
-    header .none {
+    #nav-toggle:checked + .sidebar  {
+        display: block;
+        width: 240px;
+        height: 100%;
+    }
+
+    #nav-toggle:checked ~ .main-content header .none   {
         display: none;
     }
+    #nav-toggle:checked + .sidebar  .sidebar-brand{
+       padding: 5px;
+    }
+    #nav-toggle:checked + .sidebar  .search-wrapper{
+        display: block;
+     align-items: center;
+        display: flex;
+        justify-content: center;
+    }
+    #nav-toggle:checked + .sidebar  .search-wrapper img{
+        display: block;
+        color: #fff;
+    }
+    #nav-toggle:checked + .sidebar  .sidebar-menu{
+        display: flex;
+        justify-content: center;
+        margin: 0;
+     }
+    .sidebar .sidebar-menu {
+        display: none;
+    }
+
     .sidebar{
-        width: 240px;
+       width: 60px;
+        height: auto;
+    }
+    .search-wrapper{
+        display: none;
+        font-size: 12px;
+    }
+    header{
+        padding: 18px  10px 18px 10px;
+        left: 60px;
+        justify-content: none;
+        width: calc(100% - 60px);
+    }
+    .sidebar-brand{
+        margin-right: 0;
+    }
+    .main-content main{
+        left: 0;
+    }
+    #nav-toggle:checked ~ .main-content header{
+        width: calc(100% - 240px);
+        left: 240px;
+        display: flex;
+       justify-content: end;
+    }
+
+    .main-content{
+
+        margin-left: 0;
+    }
+
+}
+@media (max-width: 500px) {
+
+    header {
+       padding: 18px 5px;
     }
     .main-content{
         margin-left: 0;
 
-    }
-    header{
-        padding: 18px  5px 18px 5px;
-        left: 240px;
-        justify-content: none;
-        width: calc(100% - 240px);
     }
 
     header .nav2 a{
@@ -281,17 +349,17 @@ main h1{
     .card-single{
 
         background: #009EE2;
-        padding: 15px;
+        padding: 5px;
         border-radius: 10px;
     }
     .card-single h4{
-        font-size: 16px;
+        font-size: 14px;
         color: #fff;
         display: flex;
         justify-content: center;
     }
     .card-single h3{
-        font-size: 16px;
+        font-size: 14px;
         color: #000;
     }
     .contenu{
