--- a/public/assets/css/validate-projet.css
+++ b/public/assets/css/validate-projet.css
@@ -80,14 +80,33 @@
 }
 
 .validate-footer {
+    padding: 0;
+    margin: 0;
     width: 100%;
-    height: 100px;
- }
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 150px;
+}
+
 .validate-footer img {
     width: 100%;
     height: 100%;
 }
 
+.validate-footer button {
+    position: absolute;
+    font-family: 'Ubuntu';
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 25px;
+    letter-spacing: -0.02em;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    border-radius: 25px 0px 25px 0px;
+    padding: 5px 15px;
+    border: none;
+}
 
 @media(max-width: 990px) {
     .infos-projets .rectangle-profil {
