--- a/public/assets/css/depot-projet.css
+++ b/public/assets/css/depot-projet.css
@@ -62,7 +62,7 @@
 
 }
 
-.depot-projet .zip {
+.depot-projet .depot .zip {
     width: auto;
     display: flex;
     margin: 0 auto;
@@ -73,7 +73,7 @@
     border: none;
 }
 
-.depot-projet .zip a {
+.depot-projet .depot .zip a {
     text-decoration: none;
     font-family: 'Manrope';
     font-style: normal;
@@ -84,7 +84,7 @@
     color: #009EE2;
 }
 
-.depot-projet .zip a span {
+.depot-projet .depot .zip a span {
     color: #E20000;
 }
 
@@ -189,16 +189,16 @@
 }
 
 .depot .row form .upload-icon {
-    margin: 25px 2px 2px 2px;
+    margin: 25px 2px;
 }
 
-.depot .row form .upload-input {
+.depot .row form .dropzone>input {
+    display: none;
+}
+.depot .row form .dropzone .upload-input {
     position: relative;
-    top: -62px;
-    left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0;
 }
 
 
@@ -272,22 +272,18 @@
     border: none;
     padding: 10px 20px;
     box-shadow: 0px 0px 10px #009EE2;
-
     font-family: 'Manrope';
     font-style: normal;
     font-weight: 400;
     font-size: 15px;
     line-height: 32px;
-    display: flex;
-    align-items: center;
-    text-align: center;
     letter-spacing: -0.02em;
     color: #009EE2;
 }
 
 @media(max-width: 1110px) {
     .depot-projet h4,
-    .depot-projet .zip a {
+    .depot-projet .depot .zip a {
         font-size: 15px;
         line-height: 20px;
     }
@@ -317,7 +313,7 @@
         line-height: 30px;
     }
     .depot-projet h4,
-    .depot-projet .zip a {
+    .depot-projet .depot .zip a {
         padding: 2px;
         font-size: 15px;
         line-height: 20px;
@@ -357,8 +353,8 @@
     .depot .row form .dropzone p,
    .depot .row .col-md-12 .col-md-6 .btn,
     .depot-projet h4,
-    .depot-projet .zip,
-    .depot-projet .zip a {
+    .depot-projet .depot .zip,
+    .depot-projet .depot .zip a {
         padding: 5px;
         font-size: 12px;
         line-height: 15px;
@@ -421,8 +417,8 @@
     .depot .row form .dropzone p,
    .depot .row .col-md-12 .col-md-6 .btn,
     .depot-projet h4,
-    .depot-projet .zip,
-    .depot-projet .zip a {
+    .depot-projet .depot .zip,
+    .depot-projet .depot .zip a {
         font-size: 10px;
         line-height: 15px;
     }
@@ -444,8 +440,8 @@
         line-height: 15px;
     }
 
-    .depot-projet .zip,
-    .depot-projet .zip a {
+    .depot-projet .depot .zip,
+    .depot-projet .depot .zip a {
         padding: 1px;
     }
     .depot .row form .form-check {
