--- a/public/assets/css/accueil.css
+++ b/public/assets/css/accueil.css
@@ -1,9 +1,19 @@
 .container-fluid1 {
-    position: relative;
+    /* position: relative; */
     background-color: #009EE2;
     clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
-    z-index: -1;
+    z-index: 100;
 }
+
+.container-fluid {
+    margin: 0;
+}
+
+
+/* .container-fluid1,
+.vg {
+    position: relative;
+} */
 
 .back-to-top {
     position: fixed;
@@ -86,13 +96,15 @@
     text-decoration: none;
 }
 
-.container-fluid1 .contenu {
+
+/* .container-fluid1 .contenu {
     z-index: 1;
-}
+} */
 
 .vb {
-    margin-top: -200px;
-    z-index: 1;
+    position: relative;
+    margin-top: -100px;
+    z-index: 20;
 }
 
 .boxAccueil {
@@ -121,6 +133,28 @@
     font-style: normal;
     font-size: 18px;
     line-height: 40px;
+}
+
+.btn3 {
+    color: #fff;
+    background-color: #EB1566;
+    border: none;
+    border-radius: 20px;
+    text-decoration: none;
+    width: 170px;
+    margin-left: 90%;
+}
+
+.btn3 p {
+    font-size: 12px;
+    line-height: 0px;
+    margin-top: -5px;
+}
+
+.imag {
+    width: 20px;
+    margin-top: 20px;
+    margin-left: -8%;
 }
 
 .btn2 {
@@ -362,7 +396,6 @@
     font-family: "ubuntu";
     font-size: 48px;
     font-weight: 400;
-    margin-top: -50px;
     font-style: normal;
 }
 
@@ -416,7 +449,7 @@
     /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
     box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.16), 0px 4px 32px rgba(0, 0, 0, 0.16);
     border: none;
-    width: 300px;
+    width: 270px;
     margin-left: 15%;
     border-radius: 16px;
 }
@@ -427,7 +460,7 @@
 
 .boxAccueil2 h2 {
     font-family: "ubuntu";
-    font-size: 20px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 400;
     color: black;
@@ -455,6 +488,38 @@
         font-size: 25px;
         line-height: 45px;
         justify-content: center;
+    }
+    .bg-white img {
+        width: 350px;
+        height: 400px;
+    }
+    .boxOval {
+        width: auto;
+        border-radius: 0 100px 0 100px;
+        margin-top: 50px;
+    }
+    .boxOval h1 {
+        font-size: 28px;
+        padding: 10px 0;
+        margin-top: 0;
+    }
+    .boxOval p {
+        font-size: 20px;
+    }
+    .boxOval .btn {
+        width: 200px;
+        height: 40px;
+        color: #fff;
+        font-size: 18px;
+    }
+    .btn3 {
+        color: #fff;
+        background-color: #EB1566;
+        border: none;
+        border-radius: 20px;
+        text-decoration: none;
+        width: 200px;
+        margin-left: 35%;
     }
     .texte {
         width: 100%;
@@ -550,9 +615,19 @@
         margin-left: 10%;
         font-weight: 500;
     }
+    .box2 {
+        margin-left: 20px;
+        margin-right: 20px;
+        width: 150px;
+        height: 250px;
+    }
+    .box2 img {
+        width: 130px;
+        height: auto;
+    }
 }
 
-@media(max-width: 500px) {
+@media(max-width: 780px) {
     .container-fluid1 {
         width: 100%;
     }
@@ -570,11 +645,23 @@
     .text-right img {
         width: 150px;
         height: 150px;
+        margin-left: 0;
+        margin-right: 25%;
+        margin-top: 50px;
     }
     .bouton {
         width: 120px;
         height: 45px;
         font-size: 10px;
+    }
+    .btn3 {
+        color: #fff;
+        background-color: #EB1566;
+        border: none;
+        border-radius: 20px;
+        text-decoration: none;
+        width: 200px;
+        margin-left: 10%;
     }
     .btn-bouton {
         width: 120px;
@@ -647,13 +734,13 @@
     }
     .boxAccueil1 .contenu {}
     .boxAccueil1 .image {
-        margin-left: -1%;
+        margin-left: -3%;
         width: 20px;
         height: 20px;
     }
     .boxAccueil1 .contenu h5 {
         font-size: 14px;
-        margin-top: 25px;
+        margin-top: 30px;
     }
     .boxAccueil1 .contenu p {
         font-size: 14px;
@@ -665,12 +752,202 @@
     }
     b {
         margin-left: 20%;
+        margin-top: 50px;
     }
     .boxOval {
         width: auto;
+        border-radius: 0 100px 0 100px;
+        margin-top: 50px;
     }
     .boxOval h1 {
         font-size: 18px;
+        padding: 10px 0;
+        margin-top: 0;
+    }
+    .boxOval p {
+        font-size: 12px;
+    }
+    .boxOval .btn {
+        width: 200px;
+        height: 40px;
+        color: #fff;
+        font-size: 18px;
+    }
+    .texte {
+        width: 100%;
+        margin-top: -60px;
+    }
+    .texte p {
+        font-size: 16px;
+    }
+    .texte h1 {
+        font-size: 20px;
+    }
+    .boxAccueil2 {
+        width: 80%;
+        margin-left: 10%;
+    }
+    .boxAccueil2 a {
+        text-decoration: none;
+    }
+    .boxAccueil2 h2 {
+        font-size: 18px;
+    }
+    .teste {
+        font-size: 25px;
+    }
+    .boxAccueil2 img {
+        width: 30px;
+        height: 30px;
+    }
+    .box2 {
+        margin-left: 20px;
+        margin-right: 20px;
+        width: 150px;
+        height: 250px;
+    }
+    .box2 img {
+        width: 130px;
+        height: auto;
+    }
+}
+
+@media(max-width: 500px) {
+    .container-fluid1 {
+        width: 100%;
+    }
+    body {
+        width: 100%;
+    }
+    .container-fluid1 h1 {
+        font-size: 20px;
+        line-height: 45px;
+    }
+    .text-right {
+        margin-left: -20%;
+        justify-content: left!important;
+    }
+    .text-right img {
+        width: 150px;
+        height: 150px;
+        margin-left: 0;
+        margin-right: 25%;
+        margin-top: 50px;
+    }
+    .bouton {
+        width: 120px;
+        height: 45px;
+        font-size: 10px;
+    }
+    .btn3 {
+        color: #fff;
+        background-color: #EB1566;
+        border: none;
+        border-radius: 20px;
+        text-decoration: none;
+        width: 200px;
+        margin-left: 10%;
+    }
+    .btn-bouton {
+        width: 120px;
+        height: 45px;
+        font-size: 10px;
+    }
+    .boxAccueil {
+        width: auto;
+    }
+    .container-fluid2 h2 {
+        font-weight: 400;
+        font-size: 30px;
+        margin-top: 100px;
+    }
+    .container-fluid2 p {
+        font-size: 18px;
+    }
+    .cadreImage {
+        width: 100%;
+        height: 100%;
+    }
+    .cadreImage h5 {
+        font-size: 18px;
+        font-weight: 400;
+    }
+    .cadreImage img {
+        width: 100px;
+        height: 100px;
+        margin-top: 40px;
+    }
+    .bouton1 {
+        width: auto;
+        height: auto;
+        margin-left: 0;
+    }
+    .box h5 {
+        font-size: 12px;
+    }
+    .box p {
+        font-size: 12px;
+    }
+    .box {
+        min-width: 150px;
+        margin-left: 5%;
+        margin-right: 5%;
+        height: 200px;
+    }
+    .box img {
+        max-width: 50px;
+        max-height: 50px;
+        margin-left: -55%;
+    }
+    .text-justify {
+        font-weight: 400;
+        font-size: 18px;
+        width: 80%;
+        /* margin-left: 10%; */
+    }
+    .texte1 {
+        font-size: 25px;
+        /* width: 50%; */
+        line-height: 35px;
+        /* margin-left: 10%; */
+        font-weight: 500;
+    }
+    .boxAccueil1 {
+        margin-top: 10px;
+        width: 85%;
+        margin-left: 8%;
+    }
+    .boxAccueil1 .contenu {}
+    .boxAccueil1 .image {
+        margin-left: -3%;
+        width: 20px;
+        height: 20px;
+    }
+    .boxAccueil1 .contenu h5 {
+        font-size: 14px;
+        margin-top: 30px;
+    }
+    .boxAccueil1 .contenu p {
+        font-size: 14px;
+    }
+    .contenu .btn {
+        height: 22px;
+        font-size: 5px;
+        width: 80px;
+    }
+    b {
+        margin-left: 20%;
+        margin-top: 50px;
+    }
+    .boxOval {
+        width: auto;
+        border-radius: 0 100px 0 100px;
+        margin-top: 50px;
+    }
+    .boxOval h1 {
+        font-size: 18px;
+        padding: 10px 0;
+        margin-top: 0;
     }
     .boxOval p {
         font-size: 12px;
