--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -5,7 +5,7 @@ footer {
     clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
 }
 
-.container-fluid {
+.footer0 {
     margin-top: 100px;
 }
 
