--- a/public/assets/css/maintenance.css
+++ b/public/assets/css/maintenance.css
@@ -4,19 +4,21 @@ body {
     margin: 0px;
     font-family: 'Ubuntu';
 }
-.container-fluid img {
+.maintenance img {
     width: 30%;
     height: 30%;
-    margin-top: 140px;
+/*     margin-top: 140px; */
 }
-.container-fluid {
+.maintenance {
+    height: 100%;
+    padding: 200px 0 100px;
     width: 100%;
     text-align: center;
 }
 
-.container-fluid .col-md-12 h1 {
+.maintenance .col-md-12 h1 {
     width: 100%;
-    margin-bottom: 140px;
+/*     margin-bottom: 140px; */
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 400;
@@ -31,15 +33,15 @@ body {
         margin:0;
         width: 100%;
     } */
-    .container-fluid .col-md-12 h1 {
+    .maintenance .col-md-12 h1 {
         width: 100%;
         font-size: 36px;
         text-align: center;
-        
+
     }
 }
 @media (max-width: 900px) {
-    .container-fluid .col-md-12 h1 {
+    .maintenance .col-md-12 h1 {
         width: 100%;
         font-size: 32px;
         text-align: center;
@@ -47,7 +49,7 @@ body {
 }
 
 @media (max-width: 800px) {
-    .container-fluid .col-md-12 h1 {
+    .maintenance .col-md-12 h1 {
         width: 100%;
         font-size: 30px;
         text-align: center;
@@ -55,21 +57,28 @@ body {
 }
 
 @media (max-width: 700px) {
-    .container-fluid .col-md-12 h1 {
+    .maintenance .col-md-12 h1 {
         width: 100%;
         font-size: 28px;
         text-align: center;
     }
 }
 @media (max-width: 600px) {
-    .container-fluid .col-md-12 h1 {
+    .maintenance .col-md-12 h1 {
         width: 100%;
         font-size: 20px;
         text-align: center;
     }
 }
 @media (max-width: 500px) {
-    .container-fluid .col-md-12 h1 {
+    .maintenance {
+        padding: 110px 0 50px;
+    }
+    .maintenance img {
+        width: 50%;
+        /* margin-top: 140px; */
+    }
+    .maintenance .col-md-12 h1 {
         width: 100%;
         font-size: 18px;
         text-align: center;
@@ -77,7 +86,7 @@ body {
 }
 
 @media (max-width: 370px) {
-    .container-fluid .col-md-12 h1 {
+    .maintenance .col-md-12 h1 {
         width: 100%;
         font-size: 15px;
         text-align: center;
