--- a/public/assets/css/formations.css
+++ b/public/assets/css/formations.css
@@ -1,4 +1,3 @@
-
 .navbars h1 {
     margin-top: 100px;
     width: 100%;
@@ -10,10 +9,10 @@
     text-align: center;
     color: #212121;
 }
-
-.container .btn-link {
-    margin-right: -130px;
+.container .bnt {
     margin-left: 120px;
+}
+.container .btn-link {
     color: #FFFFFF;
     font-family: 'Ubuntu';
     font-style: normal;
@@ -23,7 +22,7 @@
     background-color: #009EE2;
     color: #FFFFFF;
 } */
-.accordion-button:not(.collapsed) {
+.accordion-header .accordion-button:not(.collapsed) {
     color: #FFFFFF;
     background-color: #009EE2;
 }
@@ -35,10 +34,12 @@
     width: 70%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
+    margin-top: 20px;
     font-family: 'Ubuntu';
     font-style: normal;
-    border-color: #009EE2;
+    border: none;
+/*     border-color: #009EE2; */
+    box-shadow: 0px 2px 4px #009EE2;
 }
 .bloc1 {
     margin: 0;
@@ -138,12 +139,19 @@
         font-size: 20px;
         line-height: 40px;
     }
+    .container .bnt {
+        margin-left: 80px;
+    }
 }
 @media (max-width: 500px) {
     .navbars h1 {
-        margin-top: 80px;
+        margin-top: 20px;
         font-size: 18px;
-        line-height: 30px;
+        line-height: 50px;
+    }
+
+    .container .bnt {
+        margin: 20px 0 0px;
     }
 }
 @media (max-width: 360px) {
@@ -224,26 +232,28 @@
 }
 @media (max-width: 500px) {
     .bloc1 {
-        padding: 50px 0 50px 0;
+        padding: 50px 0 80px 0;
     }
     .bloc1 .col-md-6 {
         width: 100%;
     }
     .bloc1  .card-title {
         font-size: 25px;
+        padding: 0;
+        margin: 20px 0 0;
         line-height: 44px;
     }
     .bloc1 .card {
+        padding: 0;
+        margin-top: -40px;
         align-items: baseline;
-        margin-bottom: 20px;
+        margin-bottom: 50px;
         width: 100%;
     }
-    .bloc1  .card-text {
+    .container .btn-link,
+    .bloc1 .card .card-body .card-text {
         font-size: 15px;
         line-height: 20px;
     }
+
 }
-
-
-
-
