partie formations, contact, header2 maintenance(404). la partie partie des partenaires est en cours...

--- a/public/assets/css/modification_mdp.css
+++ b/public/assets/css/modification_mdp.css
@@ -19,7 +19,7 @@
 /*modification mdp*/
 
 .md-pass{
-    width: 500px;
+    width: 100%;
     background-color: #fff;
     border-radius: 4px;
     overflow: hidden;
@@ -30,13 +30,19 @@
 }
 
 .form-control{
-    margin-bottom: 10px;
-    padding-bottom: 10px;
+    width: 60%;
+    margin: auto;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    border: none;
     position: relative;
 }
 .form-control label {
     display: inline-block;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+    color: #009EE2;
+    font-family: 'Ubuntu';
+    font-weight: 600;
 }
 .form-control input{
     display: block;
@@ -66,12 +72,6 @@ button{
     border: none;
     cursor: pointer;
 }
-
-
-
-
-
-
 /*Média quéry*/
 @media (max-width: 900px) {
     .admin h2 {
@@ -86,5 +86,36 @@ button{
 @media (max-width: 500px) {
     .admin h2 {
         font-size: 16px;
+    }
+}
+@media (max-width: 768px) {
+    .form-control label {
+        margin-bottom: 10px;
+        font-size: 12px;
+    }
+    .form-control input{
+        padding: 6px;
+    }
+}
+@media (max-width: 412px) {
+    .form-control label {
+        font-size: 10px;
+    }
+}
+@media (max-width: 500px) {
+    .form-control{
+        margin-bottom: 10px;
+        padding-bottom: 10px;
+    }
+}
+@media (max-width: 768px) {
+    button {
+        font-size: 12px;
+    }
+}
+@media (max-width: 412px) {
+    button {
+        font-size: 8px;
+        padding: 8px 10px;
     }
 }
