--- a/public/assets/css/prestataires.css
+++ b/public/assets/css/prestataires.css
@@ -61,7 +61,6 @@
     margin: auto;
     overflow: hidden;
     background: #009EE2;
-    /*     margin-top: 30px; */
     clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
 }
 
@@ -171,17 +170,24 @@
     border: none;
 }
 
-/* .clients img {
-    width: 100%;
-    height: 70%;
-    padding: 40px 0px 0px 20px;
-} */
-.clients img {
-    width: 100%;
-    padding: 0px 0px 0px 100px;
+.presta button{
+    background-color: #009EE2;
+    color:#fff;
+    font-family: 'Ubuntu';
+    padding: 10px 20px;
+    width: auto;
+    margin-top: 10px;
+    border-radius: 50px;
+    border: none;
+    cursor: pointer;
 }
 
-.d-grid .btn-primary {
+.clients img {
+    width: 100%;
+    padding: 0px 0px 0px 80px;
+}
+
+/* .d-grid .btn-primary {
     font-size: 25px;
     font-weight: 400;
     margin: 10px 10px 10px 10px;
@@ -190,7 +196,7 @@
     background-color: #009EE2;
     border: none;
     border-radius: 50px;
-}
+} */
 
 .containers .card-body p {
     width: 100%;
@@ -199,8 +205,6 @@
     font-weight: 700;
     font-size: 44px;
 /*     line-height: 50px; */
-/*     margin-left: 130px; */
-/*     margin: 60px; */
     margin: 10px 100px;
     color: #009EE2;
 }
@@ -444,8 +448,7 @@
         padding: 20px 20px 20px 20px;
     }
 }
-
-@media (max-width: 1150px) {
+/* @media (max-width: 1150px) {
     .d-grid .btn-primary {
         font-size: 20px;
     }
@@ -466,6 +469,13 @@
 @media (max-width: 400px) {
     .d-grid .btn-primary {
         font-size: 12px;
+    }
+} */
+@media (max-width: 500px) {
+   .presta button {
+        font-size: 12px;
+        padding: 5px 10px;
+        margin-top: 10px
     }
 }
 
