--- a/public/assets/css/profil_administrateur.css
+++ b/public/assets/css/profil_administrateur.css
@@ -15,8 +15,7 @@
     margin-bottom: 60px;
     margin-top: 60px;
 }
-
-.d-grid .btn {
+/* .d-grid .btn {
     width: auto;
     font-size: 20px;
     font-weight: 500;
@@ -27,16 +26,28 @@
     border: none;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 1.16), 0px 4px 10px rgba(0, 0, 0, 0.16);
     border-radius: 50px;
+} */
+.form-control button {
+    width: auto;
+    padding: 5px 40px;
+    font-size: 25px;
+    background-color: #fff;
+    color:#009EE2;
+    border: none;
+    border-radius: 50px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 1.16), 0px 4px 10px rgba(0, 0, 0, 0.16);
+    cursor: pointer;
 }
 
 .col-md-12 img {
-    width: 8%;
+    width: 10%;
     padding-top: 50px;
 }
 
 .flex {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .container {
@@ -54,7 +65,7 @@ form {
     background: #fff;
     border-radius: 8px;
     padding: 50px;
-    max-width: 600px;
+    max-width: 70%;
     width: 100%;
 }
 
@@ -77,7 +88,6 @@ form input:hover {
         flex-direction: column;
         text-align: center;
     }
-
 }
 
 @media (max-width: 460px) {
@@ -87,12 +97,12 @@ form input:hover {
 }
 
 @media (max-width: 930px) {
-    .d-grid .btn {
+    .form-control button {
         font-size: 16px;
     }
 }
 @media (max-width: 760px) {
-    .d-grid .btn {
+    .form-control button {
         font-size: 12px;
     }
 }
@@ -145,5 +155,10 @@ form input:hover {
     form input {
         height: 35px;
         margin-bottom: 30px;
+    }
+}
+@media (max-width: 930px) {
+    .d-grid .btn {
+        font-size: 16px;
     }
 }
